# nucleus-apple-mcp

./: .gitignore  .mcp.json  AGENTS.md  README.md  README.zh-CN.md  justfile  nucleus-apple-mcp.code-workspace  pyproject.toml  skills-lock.json
.agents/skills/: nucleus-apple-health
.agents/skills/swiftui-liquid-glass/agents/: openai.yaml
.agents/skills/swiftui-patterns/: SKILL.md
.agents/skills/swiftui-patterns/references/: architecture-patterns.md  deprecated-migration.md  design-polish.md  platform-and-sharing.md
.agents/skills/swiftui-performance/: SKILL.md
.claude/skills/: nucleus-apple-calendar  nucleus-apple-notes  nucleus-apple-reminders
.codex/: config.toml
.github/workflows/: ci.yml  notify-website.yml  publish.yml  release.yml
apps/ios/Nucleus/: APP_STORE_SUBMISSION.md  README.md
apps/ios/Nucleus/Nucleus/: Info.plist  (+20 more)
docs/: getting-started.md  introducing-nucleus.md  introducing-nucleus.site.json
docs/specs/: calendar.md  health.md  health_cn.md  notes.md  reminders.md
skills/nucleus-apple-calendar/: SKILL.md
skills/nucleus-apple-calendar/agents/: openai.yaml
skills/nucleus-apple-calendar/references/: commands.md  decision-rules.md  failure-modes.md
skills/nucleus-apple-health/: SKILL.md
skills/nucleus-apple-health/agents/: openai.yaml
skills/nucleus-apple-health/references/: commands.md  decision-rules.md  failure-modes.md
skills/nucleus-apple-notes/: SKILL.md
skills/nucleus-apple-notes/agents/: openai.yaml
skills/nucleus-apple-notes/references/: commands.md  decision-rules.md  failure-modes.md
skills/nucleus-apple-reminders/: SKILL.md
skills/nucleus-apple-reminders/agents/: openai.yaml
skills/nucleus-apple-reminders/references/: commands.md  decision-rules.md  failure-modes.md
src/nucleus_apple_mcp/: __init__.py  __main__.py  cli.py  mcp_app.py
src/nucleus_apple_mcp/sidecar/: __init__.py  builder.py  client.py
src/nucleus_apple_mcp/tools/: __init__.py  calendar.py  health.py  notes.py  reminders.py
tests/: test_agent_workspace.py  test_cli.py  test_health_tools.py
tests/agent-workspace/: README.md
(+67 files in other folders)
